--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
-GIT_ACCESS_TOKEN=
-GIT_USERNAME=
-GIT_PASSWORD=
-GIT_BRANCH=
-GIT_DEPTH=
-PROXY_URL=
+GIT_REPO_URL=''
+GIT_ACCESS_TOKEN=''
+GIT_USERNAME=''
+GIT_PASSWORD=''
+GIT_BRANCH=''
+GIT_DEPTH=1
+PROXY_URL=''
