--- a/apps/stash/data.yml
+++ b/apps/stash/data.yml
@@ -1,6 +1,6 @@
 name: Stash
 tags:
-  - Multimedia
+  - Media
 title: Media Management Tools
 description: Media Management Tools
 additionalProperties:
