--- a/apps/1panel-tools/data.yml
+++ b/apps/1panel-tools/data.yml
@@ -1,7 +1,7 @@
 name: 1Panel-Tools
 tags:
-  - 实用工具
-  - 开发工具
+  - Tool
+  - DevTool
 title: 轻松将您的 Docker Compose 文件转换为 1Panel 应用商店格式
 description:
   en: Convert your Docker Compose files to 1Panel AppStore format with ease
